repo-sqale: first skeletal non-paging iterative search implementation
New SqaleRepoSearchIterativeTest introduced, WIP.
Clearing perf monitor in tests is now a single method call of
clearPerformanceMonitor(), other perf counts can be asserted.